@@ -1,10 +1,14 @@
 package it.uniroma2.art.semanticturkey.extension.settings;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import it.uniroma2.art.semanticturkey.extension.settings.impl.SettingsSupport;
 import it.uniroma2.art.semanticturkey.project.Project;
 import it.uniroma2.art.semanticturkey.properties.STPropertiesManager;
 import it.uniroma2.art.semanticturkey.properties.STPropertyAccessException;
 import it.uniroma2.art.semanticturkey.properties.STPropertyUpdateException;
+import it.uniroma2.art.semanticturkey.resources.Scope;
+import it.uniroma2.art.semanticturkey.settings.events.SettingsDefaultsUpdated;
+import it.uniroma2.art.semanticturkey.settings.events.SettingsUpdated;
 import it.uniroma2.art.semanticturkey.utilities.ReflectionUtilities;
 
 /**
@@ -33,9 +37,11 @@ public interface ProjectSettingsManager<T extends Settings> extends SettingsMana
 
 	default void storeProjectSettings(Project project, T settings) throws STPropertyUpdateException {
 		STPropertiesManager.setProjectSettings(settings, project, getId(), true);
+		SettingsSupport.getEventPublisher().publishEvent(new SettingsUpdated(this, project, null, null, Scope.PROJECT, settings));
 	}
 
 	default void storeProjectSettingsDefault(T settings) throws STPropertyUpdateException {
 		STPropertiesManager.setProjectSettingsDefault(settings, getId(), true);
+		SettingsSupport.getEventPublisher().publishEvent(new SettingsDefaultsUpdated(this, null, null, null, Scope.PROJECT, Scope.SYSTEM, settings));
 	}
 }
