@@ -1,9 +1,12 @@
 package it.uniroma2.art.semanticturkey.extension.settings;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import it.uniroma2.art.semanticturkey.extension.settings.impl.SettingsSupport;
 import it.uniroma2.art.semanticturkey.properties.STPropertiesManager;
 import it.uniroma2.art.semanticturkey.properties.STPropertyAccessException;
 import it.uniroma2.art.semanticturkey.properties.STPropertyUpdateException;
+import it.uniroma2.art.semanticturkey.resources.Scope;
+import it.uniroma2.art.semanticturkey.settings.events.SettingsUpdated;
 import it.uniroma2.art.semanticturkey.utilities.ReflectionUtilities;
 
 /**
@@ -23,6 +26,7 @@ public interface SystemSettingsManager<T extends Settings> extends SettingsManag
 
 	default void storeSystemSettings(T settings) throws STPropertyUpdateException {
 		STPropertiesManager.setSystemSettings(settings, getId(), true);
+		SettingsSupport.getEventPublisher().publishEvent(new SettingsUpdated(this, null, null, null, Scope.SYSTEM, settings));
 	}
 
 	default T getSystemSettings(boolean explicit) throws STPropertyAccessException {
