@@ -2,10 +2,14 @@ package it.uniroma2.art.semanticturkey.extension.settings;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import it.uniroma2.art.semanticturkey.extension.settings.impl.SettingsSupport;
 import it.uniroma2.art.semanticturkey.project.Project;
 import it.uniroma2.art.semanticturkey.properties.STPropertiesManager;
 import it.uniroma2.art.semanticturkey.properties.STPropertyAccessException;
 import it.uniroma2.art.semanticturkey.properties.STPropertyUpdateException;
+import it.uniroma2.art.semanticturkey.resources.Scope;
+import it.uniroma2.art.semanticturkey.settings.events.SettingsDefaultsUpdated;
+import it.uniroma2.art.semanticturkey.settings.events.SettingsUpdated;
 import it.uniroma2.art.semanticturkey.user.STUser;
 import it.uniroma2.art.semanticturkey.utilities.ReflectionUtilities;
 
@@ -35,10 +39,12 @@ public interface UserSettingsManager<T extends Settings> extends SettingsManager
 
 	default void storeUserSettings(STUser user, T settings) throws STPropertyUpdateException {
 		STPropertiesManager.setUserSettings(settings, user, getId(), true);
+		SettingsSupport.getEventPublisher().publishEvent(new SettingsUpdated(this, null, user, null, Scope.USER, settings));
 	}
 
 	default void storeUserSettingsDefault(T settings) throws STPropertyUpdateException {
 		STPropertiesManager.setUserSettingsDefault(settings, getId(), true);
+		SettingsSupport.getEventPublisher().publishEvent(new SettingsDefaultsUpdated(this, null, null, null, Scope.USER, Scope.SYSTEM, settings));
 	}
 
 
