@@ -2,7 +2,9 @@ package it.uniroma2.art.semanticturkey.extension.settings.impl;
 
 import javax.annotation.Nullable;
 
+import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleContext;
+import org.osgi.framework.Constants;
 import org.osgi.framework.FrameworkUtil;
 import org.osgi.framework.ServiceReference;
 
@@ -20,8 +22,34 @@ import it.uniroma2.art.semanticturkey.properties.STPropertyAccessException;
 import it.uniroma2.art.semanticturkey.properties.WrongPropertiesException;
 import it.uniroma2.art.semanticturkey.resources.Scope;
 import it.uniroma2.art.semanticturkey.utilities.ReflectionUtilities;
+import org.osgi.framework.wiring.FrameworkWiring;
+import org.springframework.context.ApplicationEventPublisher;
+
+import java.util.Arrays;
+import java.util.concurrent.atomic.AtomicReference;
 
 public abstract class SettingsSupport {
+	private static volatile ApplicationEventPublisher eventPublisher = null;
+
+	public static ApplicationEventPublisher getEventPublisher() {
+		if (eventPublisher != null) {
+			return eventPublisher;
+		}
+		Bundle bundle = FrameworkUtil.getBundle(SettingsSupport.class);
+		for (ServiceReference sr : bundle.getRegisteredServices()) {
+			if (Arrays.stream((String[])sr.getProperty(Constants.OBJECTCLASS)).anyMatch(ApplicationEventPublisher.class.getName()::equals)) {
+				eventPublisher = (ApplicationEventPublisher) bundle.getBundleContext().getService(sr);
+				break;
+			}
+		}
+
+		if (eventPublisher == null) {
+			throw new IllegalStateException("Cannot determine the application context of the ST core framework");
+		}
+
+		return eventPublisher;
+	}
+
 	public static <T extends Settings> Class<T> getSettingsClass(SettingsManager settingsManager, Scope scope) {
 		Class<?> managerTarget;
 
