@@ -13,6 +13,7 @@ date: dd/mm/yyyy
   * added Scottish Gaelic and Welsh to the system languages
   * turned OperationOnResourceDeniedException into a RuntimeException as it may be thrown from an interceptor
   * made the configuration of rendering engines more user friendly (i.e. renaming ${languages} to ${userLangs} and ${show} to ${labels})
+  * enabled events on settings managers
   * updated dependency on Coda 1.7.2
   * updated dependency on Sheet2RDF 4.2.0
   * updated dependency on MAPLE 0.0.8
